; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/misc/extr_lock.c_msvcrt_init_mt_locks.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/misc/extr_lock.c_msvcrt_init_mt_locks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"initializing mtlocks\0A\00", align 1
@_TOTAL_LOCKS = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@_LOCKTAB_LOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @msvcrt_init_mt_locks() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @TRACE(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %11, %0
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @_TOTAL_LOCKS, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %14

7:                                                ; preds = %3
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @FALSE, align 4
  %10 = call i32 @msvcrt_mlock_set_entry_initialized(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %7
  %12 = load i32, i32* %1, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %1, align 4
  br label %3

14:                                               ; preds = %3
  %15 = load i32, i32* @_LOCKTAB_LOCK, align 4
  %16 = call i32 @msvcrt_initialize_mlock(i32 %15)
  ret void
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @msvcrt_mlock_set_entry_initialized(i32, i32) #1

declare dso_local i32 @msvcrt_initialize_mlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
